having issues with beans getting overridden

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
+#logging.level.org.springframework=DEBUG
 logging.level.org.springframework.security=TRACE
+
+spring.autoconfigure.exclude=
 
 azure.activedirectory.tenant-id=8a333ad8-d91b-4cbf-853a-73e13bc8d264
 azure.activedirectory.client-id=09adaace-5761-4930-b102-3b597d5cc255
 azure.activedirectory.client-secret=c~zGKw2WP4.hz3KGl8-n.S1-g0YVh7.2Kd
+azure.activedirectory.app-id-uri=api://09adaace-5761-4930-b102-3b597d5cc255
 
-azure.activedirectory.authorization-clients.oauthTest.scopes:api://09adaace-5761-4930-b102-3b597d5cc255/testscope.read
+azure.activedirectory.authorization-clients.oauthTest.scopes=api://09adaace-5761-4930-b102-3b597d5cc255/testscope.read
